cmake_minimum_required(VERSION 2.8)

PROJECT(rigor)
# The version number.
SET( ${PROJECT_NAME}_VERSION_MAJOR 0 )
SET( ${PROJECT_NAME}_VERSION_MINOR 1 )

# print the version no.
MESSAGE(${PROJECT_NAME} " Version: " ${${PROJECT_NAME}_VERSION_MAJOR} "." ${${PROJECT_NAME}_VERSION_MINOR})

IF(WIN32)
	SET(BOOST_ROOT "C:/Boost")
	SET (Boost_USE_STATIC_LIBS TRUE)
ENDIF(WIN32)

# find OpenCV
FIND_PACKAGE(OpenCV REQUIRED)

# find Boost libraries
SET(BOOST_LIBS program_options filesystem system timer)
FIND_PACKAGE(Boost COMPONENTS ${BOOST_LIBS} REQUIRED)

LINK_DIRECTORIES(${Boost_LIBRARY_DIRS})
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})

# add SLIC library
GET_FILENAME_COMPONENT(SLIC_CODE ${CMAKE_SOURCE_DIR}/SLIC ABSOLUTE)
INCLUDE_DIRECTORIES(${SLIC_CODE})

# add source files

GET_FILENAME_COMPONENT(RIGOR_CODE ${CMAKE_SOURCE_DIR}/src ABSOLUTE)
INCLUDE_DIRECTORIES(${RIGOR_CODE})

# set compilation
FILE(GLOB PROGRAM_SRCS *.cpp ${SLIC_CODE}/*.cpp ${RIGOR_CODE}/*.cpp)
ADD_EXECUTABLE(${PROJECT_NAME} ${PROGRAM_SRCS})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${OpenCV_LIBS} ${Boost_LIBRARIES})
